# Simple-C-Compiler

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  compiler.cc
include/: common.h  declaration.h  expression.h  statement.h  tokentype.h  translate.h
lib/: CMakeLists.txt  common.cc  declaration.cc  expression.cc  statement.cc  translate.cc
tests/: CMakeLists.txt  common_test.cc  compiler_test.cc  declaration_test.cc  expression_test.cc  out.asm  spim_test.cc  statement_test.cc  text.asm  translate_test.cc  typetoken_test.cc
tests/spimsim/: CMakeLists.txt  ChangeLog  README.rtf
tests/spimsim/CPU/: version.h
tests/spimsim/QtSpim/: QtSpim.pro  menu.cpp  regwin.cpp  spimview.cpp  spimview.h
tests/spimsim/Setup/QtSpim_Win_Deployment/WiX/: QtSpim.mingw.wxs  QtSpim.wxs
tests/spimsim/spim/: parser_yacc.cpp  parser_yacc.h  spim  spim.cpp
